# ex4

./: .gitignore  README.md  details.txt
src/: CMakeLists.txt  Main.cpp
src/Communication/: Communication.cpp  Communication.h  TCPCommunication.cpp  TCPCommunication.h
src/Factory/: MapCreator.cpp  MapCreator.h  OperateCreator.cpp  OperateCreator.h  ReadCreator.cpp  ReadCreator.h  WaitForRead.cpp  WaitForReadCreator.h  WriteCreator.cpp  WriteCreator.h
src/Operations/: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFS.cpp  BestFS.h  DFS.cpp  DFS.h  Operate.cpp  Operate.h
src/Operations/Graph/: Graph.cpp  Graph.h
src/Operations/Matrix/: ErrorCode.h  Matrix.cpp  Matrix.h  Matrix.hpp  MatrixErrorCode.cpp  MatrixErrorCode.hpp
src/Read/: Read.cpp  Read.h
src/ThreadPool/: StructParameters.h  StructQueue.h  ThreadPool.cpp  ThreadPool.h
src/Write/: Write.cpp  Write.h
